--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,18 @@
 *{
     margin:0;
     padding:0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.wrapper{
+    width:100%;
+}
 /*header*/
 
+header{
+    /*border:2px solid black;*/
+    overflow: hidden;
+}
 /*logo*/
 #logo{
     width: 25%;
@@ -33,3 +41,125 @@
     display: inline-block;
     width: 20%;
 }
+
+/*main*/
+main{
+    /*border:2px solid black;*/
+    padding: 2%;
+}
+
+/*banner in main*/
+.banner{
+    width: 96%;
+    margin: auto;
+    
+   /* border: 2px solid green;*/
+    background-color: rgb(228, 236, 233);
+    padding: 3% 2%;
+}
+#desc{
+    width: 40%;
+    /*border:2px solid black;*/
+    margin-top: 1%;
+}
+
+#desc button{
+    margin-top: 2%;
+    padding: 2px;
+    width: 25%;
+    font-size: 1.3vw;
+    border-radius: 3px;
+    border: 1px solid black;
+    background-image: linear-gradient(white, rgb(208, 218, 214), white);
+}
+
+/*cards in main*/
+.cards{
+    width:98%;
+    margin: auto;
+    /*border: 2px solid black;*/
+    padding: 1% 1%;
+    display: flex;
+    align-items: center;
+    text-align: center;;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.cards .card1{
+    width: 34%;
+    /*border: 2px solid black;*/
+    margin: 2%;
+    padding: 2%;
+}
+
+
+.cards .card1 .block{
+    width: 90%;
+    height: 25vh;
+    /*border: 2px solid black;*/
+    background-color: rgb(228, 236, 233);
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 5%;
+    border-radius: 2px;
+}
+.cards .card1 a{
+    color: black;
+}
+
+@media (max-width: 800px) {
+    .cards {
+      flex-direction: column;
+    }
+    .cards .card1{
+        width: 70%;
+    }
+    #desc button{
+        font-size: 2vw;
+    }
+    #desc{
+        width: 50%;
+    }
+  }
+
+
+  /*form*/
+  
+  .formdiv{
+      width: 96%;
+      /*border: 2px solid black;*/
+      margin: auto;
+      padding: 2%;
+      background-color: rgb(228, 236, 233);
+     
+  }
+
+  .formdiv form{
+      width: 100%;
+      /*border: 2px solid black;*/
+      font-size: 2vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+
+  .formdiv input{
+      width: 40%;
+      margin: 0 2.5%;
+      font-size: 1.2vw;
+      padding: 1%;
+      border-radius: 3px;
+      border: 1px solid black;
+  }
+  .formdiv label{
+      font-weight: bold;
+  }
+  .formdiv button{
+      width: 20%;
+      background-color: rgb(13, 167, 228);
+      color: white;
+      font-size: 2vw;
+      padding: 4px;
+      border: none;
+  }
