--- a/src/style.css
+++ b/src/style.css
@@ -125,7 +125,7 @@ main{
 
 
   /*form*/
-  
+
   .formdiv{
       width: 96%;
       /*border: 2px solid black;*/
@@ -142,6 +142,7 @@ main{
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-wrap: wrap;
   }
 
   .formdiv input{
@@ -163,3 +164,30 @@ main{
       padding: 4px;
       border: none;
   }
+
+  /*footer*/
+
+  footer{
+      width: 100%;
+  }
+
+  #side1{
+      width: 40%;
+      float: left;
+      text-align: left;
+      margin: 2% 4%;
+  }
+
+  #side2{
+    width: 40%;
+    float: right;
+    text-align:right;
+    margin: 2% 4%;
+}
+
+@media (max-width: 800px) {
+    form {
+      flex-direction: column;
+    }
+}
+
